--- a/src/content/index.jade
+++ b/src/content/index.jade
@@ -1,22 +1,58 @@
 ---
-title: React.js Starter Kit
+title: Lampshade - Creative Community Center
 component: ContentPage
 ---
 div.row
+  div.col-lg-12
+    h2.quick-blurb.
+      Lampshade is​ the mindful fusion of commodification and community. ​A​ one-stop, community-based shop for people to come freely and compassionately explore themselves and ​share their ideas, get inspired, collaborate, create, and motivate.
+    div.subhead
+      a(href="http://ypsilampshade.tumblr.com" target="_blank") Photos, Press, Progress
   div.col-sm-4
-    h3 Runtime Components
-    dl
-      dt <a href="https://facebook.github.io/react/">React</a>
-      dd A JavaScript library for building user interfaces, developed by Facebook
-      dt <a href="http://facebook.github.io/flux/">Flux</a>
-      dd Application architecture for building user interfaces
+    h3 Mission
+    div.subhead
+      p.
+        Lampshade is a place to incubate brilliance; a community resource aggregating folks from all walks, creating space for collaboration, imagination,
+        and wonderful new mixed-form projects. We fully expect several startups, websites, phone apps, theatre pieces, 501c3 orgs, and ​rad, odd, beutiful​
+        collaborations to sprout.
+      p From 6am until closing something will be going on. Whether it's sunrise yoga, an art class, live jazz, a gallery opening, an open mic, poetry slam, improv theatre, drag show, cards & games, sunset meditation, late-night dance party... you'll find your people. We're completely open to entertain any idea you have. Really. Truly. We want this to be everything we've all ever dreamed of. Our one rule is that compassion, community, love, respect, laughter, and pure white light be at the helm of the ship!
+      p In addition, all staff double as musicians so during downtime they will be performing for guests, giving artists full-time work in the field of their craft.
+  //- div.col-sm-4
+  //-   h3 Announcements
+  //-   div Yes! First Fridays was a success!
+  //-   div Come by on Tuesday for some sexy, smooth Jazz musings.
   div.col-sm-4
-    h3 Development Tools
-    dl
-      dt <a href="http://webpack.github.io/">Webpack</a>
-      dd Compiles front-end source code into modules / bundles
-      dt <a href="http://www.browsersync.io/">BrowserSync</a>
-      dd A lightweight HTTP server for development
-  div.col-sm-4
-    h3 Fork me on GitHub
-    p <a href="https://github.com/kriasoft/react-starter-kit">github.com/kriasoft/react-starter-kit</a>
+    h3 What is Lampshade?
+    h5 If Kerouac, Hemingway, Plath, Tesla, Einstein, Plato, and Joplin were alive today - Lampshade is where you'd find them.
+    div.category-list
+      div.category-item
+        img(src="img/community.jpg" alt="Community Center")
+        div Community Center
+      div.category-item
+        img(src="img/coffee-girl.jpg" alt="Coffee Shop")
+        div Coffee Shop
+      div.category-item
+        img(src="img/bookshop.jpg" alt="Book Shop")
+        div Book Shop
+      div.category-item
+        img(src="img/performance.jpg" alt="Performance")
+        div Performance and Event Space
+      div.category-item
+        img(src="img/art.jpg" alt="Art")
+        div Art Gallery
+      div.category-item
+        img(src="img/music.jpg" alt="Music")
+        div Music Venue
+      div.category-item
+        img(src="img/meditation.jpg" alt="Meditation")
+        div Yoga and Meditation Studio
+      div.category-item
+        img(src="img/crystals.jpg" alt="Crystals")
+        div Crystal Healing and Teaching Center
+      div.category-item
+        img(src="img/skincare.jpg" alt="Skin Care")
+        div Local Jewelry and Skin Care Shop
+      div.category-item
+        img(src="img/classroom.jpg" alt="Classroom")
+        div Classroom
+
