--- a/src/content/index.jade
+++ b/src/content/index.jade
@@ -3,17 +3,24 @@ title: Lampshade - Creative Community Center
 component: ContentPage
 ---
 div.row
-  div.col-lg-12
+  div.col-lg-12.main-summary
     h2.quick-blurb.
       Lampshade is​ the mindful fusion of commodification and community. ​A​ one-stop, community-based shop for people to come freely and compassionately explore themselves and ​share their ideas, get inspired, collaborate, create, and motivate.
-    div.subhead
+      <br /><br />
+      it's all a dream. anyway...
+
+    div.subhead.progress-link
       a(href="http://ypsilampshade.tumblr.com" target="_blank") Photos, Press, Progress
+  div.col-lg-12.calendar-area
+    h3 Happenings
+    iframe(src="https://www.google.com/calendar/embed?showTitle=0&showCalendars=0&height=600&wkst=1&bgcolor=%23FFFFFF&src=lampshade.life_lhn1f9put6gieurqa2vllte88k%40group.calendar.google.com&color=%2342104A&ctz=America%2FNew_York"
+           style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no")
   div.col-sm-4
     h3 Mission
     div.subhead
       p.
         Lampshade is a place to incubate brilliance; a community resource aggregating folks from all walks, creating space for collaboration, imagination,
-        and wonderful new mixed-form projects. We fully expect several startups, websites, phone apps, theatre pieces, 501c3 orgs, and ​rad, odd, beutiful​
+        and wonderful new mixed-form projects. We fully expect several startups, websites, phone apps, theatre pieces, 501c3 orgs, and ​rad, odd, beautiful​
         collaborations to sprout.
       p From 6am until closing something will be going on. Whether it's sunrise yoga, an art class, live jazz, a gallery opening, an open mic, poetry slam, improv theatre, drag show, cards & games, sunset meditation, late-night dance party... you'll find your people. We're completely open to entertain any idea you have. Really. Truly. We want this to be everything we've all ever dreamed of. Our one rule is that compassion, community, love, respect, laughter, and pure white light be at the helm of the ship!
       p In addition, all staff double as musicians so during downtime they will be performing for guests, giving artists full-time work in the field of their craft.
