--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,21 +3,21 @@
 @import '../variables.css';
 
 :root {
-  --grey: rgba(255, 255, 255, .8);
+  --linkColor: #FCF8E6;
+  --linkFontSize: 26px;
 }
 
 .Navigation-link {
   display: inline-block;
   padding: 3px 8px;
   text-decoration: none;
-  font-size: 1.25em; /* ~18px */
-  color: #8380B4;
+  font-size: var(--linkFontSize);
 }
 
 .Navigation-link,
 .Navigation-link:active,
 .Navigation-link:visited {
-  color: var(--grey);
+  color: var(--linkColor);
 }
 
 .Navigation-link:hover {
@@ -28,7 +28,7 @@
   margin-right: 8px;
   margin-left: 8px;
   border-radius: 3px;
-  background: rgba(0, 0, 0, .15);
+  background: rgba(0, 0, 0, .25);
   color: #fff;
 }
 
@@ -46,8 +46,8 @@
 }
 
 .Navigation .social-networks a {
-  color: var(--grey);
-  font-size: 22px;
+  color: var(--linkColor);
+  font-size: 28px;
   text-decoration: none;
   margin: 0 8px;
 }
@@ -55,12 +55,12 @@
 .Navigation .phone {
   float: right;
   line-height: 34px;
-  color: var(--grey);
+  color: var(--linkColor);
 }
 
 .Navigation .phone a {
   color: inherit;
-  font-size: 18px;
+  font-size: var(--linkFontSize);
   text-decoration: none;
 }
 
