--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -41,8 +41,8 @@
 }
 
 .Navigation .social-networks {
-  float: left;
   line-height: 34px;
+  margin: 0 auto 10px;
 }
 
 .Navigation .social-networks a {
@@ -53,7 +53,6 @@
 }
 
 .Navigation .phone {
-  float: right;
   line-height: 34px;
   color: var(--linkColor);
 }
@@ -67,3 +66,4 @@
 .Navigation .phone a:hover, .Navigation .social-networks a:hover {
   color: color(var(--yellow) lightness(+90%));
 }
+
