--- a/src/content/index.jade
+++ b/src/content/index.jade
@@ -11,18 +11,28 @@ div.row
 
     div.subhead.progress-link
       a(href="http://ypsilampshade.tumblr.com" target="_blank") Photos, Press, Progress
+
+  div.col-lg-12.hours
+    h3 Hours
+    div.
+      <strong>Mon-Wed</strong> 9:00 am - 9:00 pm<br />
+      <strong>Thu</strong> 9:00 am - 10:00 pm<br />
+      <strong>Fri</strong> 9:00 am - 11:00 pm<br />
+      <strong>Sat</strong> 10:00 am - 11:00 pm<br />
+      <strong>Sun</strong> 10:00 am - 10:00 pm<br />
+
   div.col-lg-12.calendar-area
     h3 Happenings
     iframe(src="https://www.google.com/calendar/embed?showTitle=0&showCalendars=0&height=600&wkst=1&bgcolor=%23FFFFFF&src=lampshade.life_lhn1f9put6gieurqa2vllte88k%40group.calendar.google.com&color=%2342104A&ctz=America%2FNew_York"
            style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no")
+
   div.col-sm-4
     h3 Mission
     div.subhead
       p.
         Lampshade is a place to incubate brilliance; a community resource aggregating folks from all walks, creating space for collaboration, imagination,
-        and wonderful new mixed-form projects. We fully expect several startups, websites, phone apps, theatre pieces, 501c3 orgs, and ​rad, odd, beautiful​
-        collaborations to sprout.
-      p From 6am until closing something will be going on. Whether it's sunrise yoga, an art class, live jazz, a gallery opening, an open mic, poetry slam, improv theatre, drag show, cards & games, sunset meditation, late-night dance party... you'll find your people. We're completely open to entertain any idea you have. Really. Truly. We want this to be everything we've all ever dreamed of. Our one rule is that compassion, community, love, respect, laughter, and pure white light be at the helm of the ship!
+        and wonderful new mixed-form projects. We fully expect several startups, websites, phone apps, theatre pieces, 501c3 orgs, and ​rad, odd, beautiful​ collaborations to sprout.
+      p We will have a full calendar of events each month. Whether it's sunrise yoga, an art class, live jazz, a gallery opening, an open mic, poetry slam, improv theatre, drag show, cards & games, sunset meditation, late-night dance party... you'll find your people. We're completely open to entertain any idea you have. Really. Truly. We want this to be everything we've all ever dreamed of. Our one rule is that compassion, community, love, respect, laughter, and pure white light be at the helm of the ship!
       p In addition, all staff double as musicians so during downtime they will be performing for guests, giving artists full-time work in the field of their craft.
   //- div.col-sm-4
   //-   h3 Announcements
@@ -30,7 +40,7 @@ div.row
   //-   div Come by on Tuesday for some sexy, smooth Jazz musings.
   div.col-sm-4
     h3 What is Lampshade?
-    h5 If Kerouac, Hemingway, Plath, Tesla, Einstein, Plato, and Joplin were alive today - Lampshade is where you'd find them.
+    p If Kerouac, Hemingway, Plath, Tesla, Einstein, Plato, and Joplin were alive today - Lampshade is where you'd find them.
     div.category-list
       div.category-item
         img(src="img/community.jpg" alt="Community Center")
